2001-01-03  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* src/mathed/math_panel.C (deco_cb): check the decoration index is
	valid. 

	* src/frontends/xforms/FormPreferences.C (feedback): apply
	formatting to the translated string, not to the original one.
	(printWarning): ditto.

	* src/gettext.C (_): translate empty string with empty string.

	* src/frontends/xforms/FormCopyright.C (build): use _() instead of
	N_(). 

	* NEWS: small update

	* UPGRADING: mention that tabular format has been changed.

2001-01-03  Juergen Vigna  <jug@sad.it>

	* src/insets/insettabular.C (InsetButtonPress): look for button==2
	and do Clipboard Paste!

	* src/insets/insettext.C (SetText): added function.

	* src/insets/insettabular.C (LocalDispatch): Fixed LFUN_PASTE and
	new LFUN_PASTESELECTION.

	* src/insets/insettext.C (draw): don't clear if top_x changes.

	* src/insets/insettabular.C (draw): clear only if the inset didn't
	change in the draw routine.

	* src/insets/insettext.C (width): make the width dependant on the
	textWidth too.

	* src/text.C (draw): comment out the UpdateInset call.

	* src/screen.C (DrawOneRow):
	(DrawFromTo): check for bv->text->status not text->status.

	* src/insets/insettabular.C (calculate_dimensions_of_cells): calculate
	dimensions of ascent-descent for the whole row.

	* src/insets/insettext.C (draw): check also for need_update == INIT.

2001-01-03  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* Makefile.am (EXTRA_DIST): add autogen.sh

2001-01-03  Miyata Shigeru  <miyata@kusm.kyoto-u.ac.jp>

	* development/OS2/quick_fix.patch: 
	* lib/configure.cmd: update OS/2 support files.

2001-01-02  Juergen Vigna  <jug@sad.it>

	* src/insets/insettabular.C (pasteSelection): rewritten correctly.

	* src/tabular.C (TeXTopHLine): 
	(TeXBottomHLine): fixed Lars new code.

	* src/insets/insettext.C (LocalDispatch): added support for math_greek.

	* src/mathed/math_symbols.C (math_insert_greek): removed current_view